errors.txt
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:23:1: error: 'required' initializer 'init(nativeHandle:)' must be provided by subclass of 'RefCounted'

^
/Users/paulskie/Documents/godot-ios-extensions/.build/plugins/swiftgodot.output/SwiftGodot/CodeGeneratorPlugin/GeneratedSources/generated/RefCounted.swift:33:21: note: 'required' initializer is declared in superclass here
    public required init(nativeHandle: UnsafeRawPointer) {
                    ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:19:14: error: use the 'required' modifier to override a required initializer
    override init() {
    ~~~~~~~~ ^
    required
/Users/paulskie/Documents/godot-ios-extensions/.build/plugins/swiftgodot.output/SwiftGodot/CodeGeneratorPlugin/GeneratedSources/generated/RefCounted.swift:28:21: note: overridden required initializer is here
    public required init () {
                    ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:23:1: error: 'required' initializer 'init(nativeHandle:)' must be provided by subclass of 'RefCounted'

^
/Users/paulskie/Documents/godot-ios-extensions/.build/plugins/swiftgodot.output/SwiftGodot/CodeGeneratorPlugin/GeneratedSources/generated/RefCounted.swift:33:21: note: 'required' initializer is declared in superclass here
    public required init(nativeHandle: UnsafeRawPointer) {
                    ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:19:14: error: use the 'required' modifier to override a required initializer
    override init() {
    ~~~~~~~~ ^
    required
/Users/paulskie/Documents/godot-ios-extensions/.build/plugins/swiftgodot.output/SwiftGodot/CodeGeneratorPlugin/GeneratedSources/generated/RefCounted.swift:28:21: note: overridden required initializer is here
    public required init () {
                    ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:6:5: error: module 'SwiftGodot' has no member named 'initialize'
    SwiftGodot.initialize(types: [Passkey.self])
    ^~~~~~~~~~ ~~~~~~~~~~
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:36:30: error: type 'Passkey' has no member 'sign_in_completed'
        emit(signal: Passkey.sign_in_completed, responseJson)
                     ~~~~~~~ ^~~~~~~~~~~~~~~~~
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/Passkey.swift:40:30: error: type 'Passkey' has no member 'sign_in_error'
        emit(signal: Passkey.sign_in_error, errorMessage)
                     ~~~~~~~ ^~~~~~~~~~~~~